ucms_contrib/ucms_contrib.css
/**
 * Sortable placeholders
 */
.ucms-placeholder {
  border-radius: 6px;
  background: #018fe2;
  opacity: .5;
}
[data-mode="grid"] .ucms-placeholder {
  float: left;
}
#ucms-cart-list .ucms-placeholder {
  float: left;
  width: 145px !important;
  height: 145px !important;
}
#ucms-cart-trash div {
  display: none;
}

/**
 * Main cart
 */
#ucms-cart {
  position: absolute;
  top: 0;
  left: 0;
  overflow-y: auto;
}
.pane-right #ucms-cart {
  bottom: 6em;
  width: 100%;
}
.pane-down #ucms-cart {
  right: 10em;
  bottom: 0;
}
#ucms-cart .alert-danger {
  clear: both;
  font-weight: bold;
}
#ucms-cart-list {
  min-height: 100px; /* Prevents empty zone */
}
#ucms-cart-list.ucms-highlighted {
  border: dashed 5px #fff;
  transition: .5s;
}

/**
 * Cart items
 */
.pane-down .ucms-cart-item {
  width: 150px;
  height: 150px;
}
.ucms-cart-item > .node,
.ucms-contrib-result-inner {
  margin: 15px 0;
  overflow: hidden;
  position: relative;
  padding-left: 0;
  padding-right: 0;
}

.ucms-cart-item h2,
.ucms-contrib-result-inner h2 {
  font-size: 12px;
  position: absolute;
  margin: 0;
  padding: 3px;
  top: 0;
  left: 0;
  right: 0;
  opacity: 0.8;
  background-color: #333;
  z-index: 1;
}

.ucms-cart-item .content h2,
.ucms-contrib-result-inner .content h2{
  display: none;
}

.ucms-cart-item > form {
  display: none;
}

.ucms-cart-item:hover > form {
  display: block;
}

.ucms-cart-item img,
.ucms-contrib-result-inner img{
  width: 100%;
  height: 100%;
}

.ucms-cart-item h2 a,
.ucms-contrib-result-inner h2 a{
  color: #fff;
  font-weight: bold;
}

/**
 * Trash
 */
#ucms-cart-trash {
  position: absolute;
  color: #fff;
  bottom: 0;
  text-align: center;
  z-index: 1;
  box-sizing: border-box;
}
.pane-right #ucms-cart-trash {
  width: 100%;
}
.pane-down #ucms-cart-trash {
  width: 10em;
  right: 0;
  top: 0;
}

#ucms-cart-trash span {
  font-size: 3em;
  display: inline-block;
  vertical-align: middle;
}
.pane-right #ucms-cart-trash span {
  margin: .5em;
}
.pane-down #ucms-cart-trash span {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-left: -22px;
  margin-top: -22px;
}

#ucms-cart-trash.ucms-highlighted {
  border: dashed .4em #fff;
  transition: .5s;
}
#ucms-cart-trash.ucms-highlighted-hover {
  box-shadow: inset 0 0 5px 10px #fff;
}
.pane-right #ucms-cart-trash.ucms-highlighted span {
  margin: .4em;
}


/**
 * Regions
 */
body [data-region].ui-sortable {
  border: dashed .2em #018fe2;
  min-height: 2em;
  transition: .5s linear;
  padding: 10px;
}

body [data-region].ucms-highlighted:after {
  content: " ";
  display: table;
  clear: both;
}

body [data-region].ucms-highlighted-over {
  box-shadow: inset 0 0 5px 10px #018fe2;
}

.ucms-layout-empty-region {
  display: none;
}

.ucms-layout-empty-region-hover {
  height: 100px;
}

#ucms-layout-edit-form {
  float: right;
}

.region-page-top {
  z-index: 2;
}

#page-wrapper {
  z-index: 1;
}

.ui-sortable [data-nid],
.ui-sortable [data-nid] a {
  cursor: move;
  z-index: 100;
}

.ui-sortable-helper {
  width: 120px;
  height: 120px;
  overflow: hidden;
  background: #fff;
  border-radius: 6px;
  -ms-animation: pulse 1s linear infinite;
  -moz-animation: pulse 1s linear infinite;
  -webkit-animation: pulse 1s linear infinite;
  animation: pulse 1s linear infinite;
  border: solid 1px #018fe2;
  z-index: 120;
}

.ui-draggable.ui-draggable-dragging > .node,
.ui-sortable-helper > .node {
  margin: 0;
}

/* Fix fucking bootstrap banner */
#page-header:after,
.main-container > .row:after {
  content: " ";
  display: table;
  clear: both;
}

@keyframes pulse {
  0% {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -o-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -webkit-transform: scale(0.8);
    -moz-transform: scale(0.8);
    -o-transform: scale(0.8);
    -ms-transform: scale(0.8);
    transform: scale(0.8);
  }
  100% {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -o-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

@-moz-keyframes pulse {
  0% {
    -moz-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -moz-transform: scale(0.8);
    transform: scale(0.8);
  }
  100% {
    -moz-transform: scale(1);
    transform: scale(1);
  }
}

@-webkit-keyframes pulse {
  0% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -webkit-transform: scale(0.8);
    transform: scale(0.8);
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@-ms-keyframes pulse {
  0% {
    -ms-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -ms-transform: scale(0.8);
    transform: scale(0.8);
  }
  100% {
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

/**
 * Default icons
 */
.ucms-default-icon {
  position: relative;
  width: 100%;
}
.ucms-cart-item .ucms-default-icon {
  display: block;
}
.ucms-default-icon:before {
  content: "";
  display: block;
  padding-top: 100%;
}
.ucms-default-icon > div {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
.ucms-default-icon > div > div {
  display: table;
  width: 100%;
  height: 100%;
}
.ucms-default-icon span {
  text-align: center;
  display: table-cell;
  vertical-align: middle;
  color: #ccc;
}
.ucms-default-icon span.glyphicon {
  font-size: 72px;
}

.node .content .ucms-type-icon,
.ucms-contrib-result-inner .ucms-type-icon {
  position: absolute;
  bottom: 0;
  right: 0;
  top: auto;
  background: #333;
  padding: 3px 1px 1px 3px;
  border-top-left-radius: 4px;
  color: #fff;
}
.node .content  .content .ucms-type-icon {
  display: none;
}
.ucms-contrib-result-inner .ucms-default-icon.img-thumbnail {
  display: block;
}
.ucms-contrib-result .node h2 {
  display: none;
}

